chore: update READMEs, add CLI text input verify flag, and coworker artifacts
- Expand .mvn/README.md with full wrapper documentation
- Expand generated/README.md with complete test asset directory layout
- Add --verify flag to browser_type and browser_press_sequentially CLI commands
- Implement verify_element_text and handle_text_input_command in main.rs
- Update coworker lock files and task entries

Co-Authored-By: Claude <noreply@anthropic.com>